@@ -25,8 +25,8 @@ called gconf_backend_get_vtable() that returns a pointer to a
 <para>
 Here are the methods the backend must implement, and their specification:
 
-<informaltable pgwide=1 frame="none">
-<tgroup cols="2"><colspec colwidth="2*"><colspec colwidth="8*">
+<informaltable pgwide="1" frame="none">
+<tgroup cols="2"><colspec colwidth="2*"/><colspec colwidth="8*"/>
 <tbody>
 
 <row>
