@@ -39,7 +39,7 @@ function assumes one reference count, and must call
 gconf_engine_unref() at some point. It's fairly important to unref the
 #GConfEngine, to cleanly close the connection to
 <application>gconfd</application>. So if possible close the connection
-before exiting your application.
+before exiting your application. see ? printf() <function>printf()</function>
 </para>
 
 @Returns: the default #GConfEngine.
