@@ -429,8 +429,8 @@ objects. gconf_engine_get_list() automatically converts to primitive C
 types. Thus, the list-&gt;data fields in the returned list 
 contain:
  
-<informaltable pgwide=1 frame="none">
-<tgroup cols="2"><colspec colwidth="2*"><colspec colwidth="8*">
+<informaltable pgwide="1" frame="none">
+<tgroup cols="2"><colspec colwidth="2*"/><colspec colwidth="8*"/>
 <tbody>
 
 <row>
@@ -494,8 +494,8 @@ gconf_engine_get_pair() stores the two fields of the pair in the locations
 pointed to by @car_retloc and @cdr_retloc. The type of these pointers
 depends on the corresponding @car_type and @cdr_type:
  
-<informaltable pgwide=1 frame="none">
-<tgroup cols="2"><colspec colwidth="2*"><colspec colwidth="8*">
+<informaltable pgwide="1" frame="none">
+<tgroup cols="2"><colspec colwidth="2*"/><colspec colwidth="8*"/>
 <tbody>
 
 <row>
