@@ -1,3 +1,12 @@
+Wed Oct 22 22:59:47 2003  Matthias Clasen  <maclas@gmx.de>
+
+	* doc/gcnf/Makefile.am: 
+	* doc/gconf/gconf.sgml:
+	* doc/gconf/tmpl/gconf-backend.sgml:
+	* doc/gconf/tmpl/gconf-client.sgml:
+	* doc/gconf/tmpl/gconf-engine.sgml:
+	* doc/gconf/tmpl/gconf.sgml: Use gtk-doc in xml mode.  (#111791)
+
 2003-10-22  Havoc Pennington  <hp@redhat.com>
 
         * gconf/gconf.c, gconf/gconfd.c: use g_string_new (NULL) 
